# universal-dependency-resolver

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_PYPI.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  install.sh  package-lock.json  pyproject.toml  pytest.ini  sonar-project.properties  start_dev.sh  udr-lock.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: badge-update.yml  benchmark.yml  build-desktop.yml  ci.yml  deploy.yml  integration-test.yml  lock-check.yml  publish.yml  release-desktop.yml  ruff-check.yml  scorecards.yml  security-audit.yml  typecheck.yml
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py  14896987c4e8_initial.py
backend/: Dockerfile  __init__.py  cli.py  logging_config.py  manifest_detector.py  requirements.txt  run.py  settings.py  tracing_config.py
backend/api/: __init__.py  auth.py  dependencies.py  exceptions.py  main.py  middleware.py  schemas.py
backend/cli/: __init__.py  __main__.py  _cuda.py  _display.py  _manifest_updaters.py  _manifest_utils.py  main.py  shared.py
backend/core/: __init__.py  _json.py  auto_solver.py  cache.py  config_loader.py  conflict_resolver.py  constraint_normalizer.py  content_cache.py  content_detector.py  data_aggregator.py  export_generator.py  forking_resolver.py  hybrid_solver.py  license_checker.py  local_index.py  local_index_crates.py  local_index_factory.py  local_index_npm.py  local_index_pypi.py  markers.py  offline_index.py  pinning.py  plugin.py  policy_engine.py  pubgrub_core.py  pubgrub_solver.py  registry_auth.py  resolution_result.py  scanner_models.py  shutdown.py  swift_parser.py  system_scanner.py  test_matrix.py  utils.py  vers.py  wheel_tags.py
backend/data_sources/: __init__.py  apk_client.py  apk_plugin.py  apt_client.py  apt_plugin.py  base_client.py  cocoapods_client.py  cocoapods_plugin.py  conan_plugin.py  conda_client.py  conda_plugin.py  crates_client.py  crates_plugin.py  custom_db_plugin.py  docker_client.py  docker_plugin.py  documentation_scraper.py  gomodules_client.py  gomodules_plugin.py  gradle_client.py  gradle_plugin.py  guix_plugin.py  haskell_client.py  haskell_plugin.py  helm_plugin.py  hex_client.py  hex_plugin.py  homebrew_client.py  homebrew_plugin.py  maven_client.py  maven_plugin.py  nix_plugin.py  npm_client.py  npm_plugin.py  nuget_client.py  nuget_plugin.py  packagist_client.py  packagist_plugin.py  pub_client.py  pub_plugin.py  (+9 more)
backend/database/: __init__.py  compatibility_db.py  models.py  service.py
backend/orchestrator/: __init__.py  __init__.pyi  db_service.py  install.py  resolve.py  scanner.py
backend/settings/: __init__.py
backend/utils/: errors.py
desktop/: app-utils.js  app.js  backend-launcher.js  index.html  main.js  package-lock.json  package.json  preload.js
desktop/buildResources/: icon.icns
desktop/tests/: app.test.js  backend-launcher.test.js  render-test.js  render.test.js  smoke.test.js
docker/: redis.conf
docs/: API.md  API_INTEGRATION.md  ARCHITECTURE.md  CLI.md  COMPONENTS.md  DEPLOYMENT.md  DESKTOP.md  DEVELOPMENT.md  EVIDENCE.md  FAQ.md  ONBOARDING.md  PERFORMANCE.md  ROADMAP.md  SDK_ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/man/: udr.1
frontend/: Dockerfile  README.md  index.html  jest-setup.js  jest.config.js  nginx.conf  package-lock.json  package.json  playwright.config.js  vue.config.js
frontend/css/: style.css
frontend/js/: api.js  app.js  utils.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/tests/: api.test.js  utils.test.js
k8s/: README.md  backend.yaml  configmap.yaml  frontend.yaml  hpa-backend.yaml  hpa-frontend.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb-backend.yaml  pdb-frontend.yaml  postgres.yaml  redis.yaml  sealed-secrets-example.yaml
monitoring/: alert_rules.yml  loki-config.yml  prometheus-free.yml  prometheus.yml  promtail-config.yml  setup_monitoring.sh
monitoring/prometheus/: sli-rules.yml
scripts/: backup_database.sh  benchmark.py  bump_version.py  check_arch_imports.py  check_data_flow.py  common.sh  deploy.sh  extract_changelog.py  full_backup.sh  generate_badge.py  restore_database.sh  run_checks.sh  run_tests.sh  seed_db.py  setup_dev.sh  sync-version.py  update_release_bodies.py  validate_k8s.sh  verify_imports.py
tests/: conftest.py  test_api_realworld.sh  test_cli_realworld.sh  test_comprehensive.py  test_problem_statement.sh
tests/benchmarks/: test_hybrid_benchmark.py
tests/cli/: test_commands.py  test_details.py  test_diff.py  test_outdated.py  test_scan.py  test_search.py  test_why.py
tests/e2e/: test_cli_realworld.py  test_edge_cases.py  test_json_compliance.py  test_pipeline.py  test_problem_statement.py
tests/integration/: conftest.py  test_api_integration.py  test_cli_pipeline.py  test_data_flow.py  test_database_integration.py
tests/performance/: load_test.js
tests/unit/: conftest.py  test_aggregator_fuzz.py  test_apk_plugin.py  test_apt_plugin.py  test_cache_fuzz.py  test_cli.py  test_cli_commands_auth.py  test_cli_commands_check.py  test_cli_commands_diff.py  test_cli_commands_graph.py  test_cli_commands_index.py  test_cli_commands_install.py  test_cli_commands_lock.py  test_cli_commands_sbom.py  test_cli_commands_update.py  test_cli_commands_verify.py  test_cli_commands_why.py  test_cli_shared.py  test_client_contract.py  test_cocoapods_plugin.py  test_conan_plugin.py  test_conda_plugin.py  test_config_loader.py  test_constraint_fuzz.py  test_content_cache.py  test_content_detector.py  test_crates_plugin.py  test_cross_eco_coverage.py  test_custom_db_plugin.py  test_docker_plugin.py  test_forking_resolver.py  test_gomodules_plugin.py  test_guix_plugin.py  (+33 more)
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
(+144 files in other folders)
