[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ud-resolver"
version = "1.1.6"
description = "A universal dependency resolver supporting multiple package ecosystems"
readme = "README_PYPI.md"
requires-python = ">=3.11,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Universal Dependency Resolver Team", email = "team@udr.example.com"},
]
keywords = ["dependency", "resolver", "package-manager", "compatibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0,<0.137",
    "uvicorn>=0.24,<0.50",
    "pydantic>=2.5.0,<3",
    # HTTP & Web Scraping
    "aiohttp>=3.9,<4",
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
    # Package Management & Versioning
    "packaging>=23.2,<27",
    "tomli-w>=1.0,<2",
    "toml>=0.10,<1",  # TODO: migrate to tomllib (stdlib) once code no longer uses `import toml`
    "pyyaml>=6.0.1,<7",
    # Algorithms & Solvers
    "networkx>=3.2.1,<4",
    "z3-solver>=4.12,<5",
    # Database
    "sqlalchemy>=2.0.23,<3",
    "alembic>=1.12,<2",
    # API
    "slowapi>=0.1.9,<1",
    "email-validator>=2.1,<3",
    "python-multipart>=0.0.6,<1",
    "jinja2>=3.1.2,<4",
    "structlog>=24.1,<25",
    "prometheus-fastapi-instrumentator>=6.1,<7",
]

[project.optional-dependencies]
system = [
    "psutil>=5.9.6,<6",
    "py-cpuinfo>=9.0,<10",
    "distro>=1.8,<2",
    "gputil>=1.4,<2",
    "nvidia-ml-py>=12.535,<13",
]
security = [
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "bcrypt<5",
]
dev = [
    "pytest>=7.4,<8",
    "pytest-asyncio>=0.21,<1",
    "pytest-cov>=4.1,<6",
    "httpx>=0.25,<1",
    "black>=23.11,<24",
    "flake8>=6.1,<7",
    "mypy>=1.7,<2",
    "bandit>=1.7,<2",
]
postgres = [
    "psycopg2-binary>=2.9.9,<3",
    "redis>=5.0.1,<6",
    "celery>=5.3.4,<6",
    "aiocache>=0.12.2,<1",
]
monitoring = [
    "opentelemetry-api>=1.22,<2",
    "opentelemetry-sdk>=1.22,<2",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-exporter-otlp-proto-http>=1.22,<2",
    "sentry-sdk[fastapi]>=1.39,<2",
    "python-socketio>=5.11,<6",
    "prometheus-client>=0.19,<1",
]
all = [
    "psutil>=5.9.6,<6",
    "py-cpuinfo>=9.0,<10",
    "gputil>=1.4,<2",
    "wmi>=1.5.1,<2 ; platform_system=='Windows'",
    "pyjwt[crypto]>=2.8,<3",
    "passlib[bcrypt]>=1.7.4,<3",
    "python-jose[cryptography]>=3.3,<4",
    "python-multipart>=0.0.6,<1",
    "httpx>=0.26,<1",
    "slowapi>=0.1.9,<1",
    "asyncpg>=0.29,<1",
    "psycopg2-binary>=2.9,<3",
    "sqlalchemy[asyncio]>=2.0.23,<3",
    "alembic>=1.13,<2",
    "redis[hiredis]>=5.0,<6",
    "celery[redis]>=5.3,<6",
    "flower>=2.0,<3",
    "opentelemetry-api>=1.22,<2",
    "opentelemetry-sdk>=1.22,<2",
    "opentelemetry-instrumentation>=0.43b0,<1",
    "opentelemetry-instrumentation-fastapi>=0.43b0,<1",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0,<1",
    "opentelemetry-instrumentation-httpx>=0.43b0,<1",
    "opentelemetry-exporter-otlp-proto-http>=1.22,<2",
    "sentry-sdk[fastapi]>=1.39,<2",
    "python-socketio>=5.11,<6",
    "prometheus-client>=0.19,<1",
]

[project.urls]
Homepage = "https://github.com/code-with-zeeshan/universal-dependency-resolver"
Repository = "https://github.com/code-with-zeeshan/universal-dependency-resolver"
Documentation = "https://github.com/code-with-zeeshan/universal-dependency-resolver"

[project.scripts]
udr = "backend.cli:main"

[tool.setuptools.packages.find]
include = ["backend*"]
